# GraphPathFinder

./: .gitignore  .travis.yml  CMakeLists.txt
benchmark/: CMakeLists.txt  chdijkstra.hpp  dijkstra.hpp  hublabels.hpp  main.cpp  parsing.hpp  phast.hpp
cmake/: flags.cmake  namedtype.cmake  options.cmake  tbb.cmake
data/: andorra.txt  ch-andorra.txt
examples/: CMakeLists.txt  chdijkstra.cpp  dijkstra.cpp  hublabels.cpp  patchcalc.cpp
examples/utils/: Timer.hpp
include/algorithms/distoracle/: PHAST.hpp
include/algorithms/distoracle/ch/: CHDijkstra.hpp  CHDijkstraBackwardHelper.hpp  CHDijkstraForwardHelper.hpp  DistanceOracleCHDijkstra.hpp  DistanceOracleCHDijkstraBackwardHelper.hpp  DistanceOracleCHDijkstraForwardHelper.hpp
include/algorithms/distoracle/dijkstra/: Dijkstra.hpp  DistanceOracleDijkstra.hpp
include/algorithms/distoracle/hublabels/: HubLabelCalculator.hpp  HubLabelLookup.hpp
include/algorithms/distoracle/patches/: Patch.hpp  PatchGrower.hpp  PatchLookup.hpp  WSPD.hpp
include/algorithms/distoracle/patches/quadtree/: BoundingBox.hpp  QuadTree.hpp  QuadTreeConstructor.hpp  QuadTreeNode.hpp
include/algorithms/pathfinding/ch/: CHDijkstra.hpp  CHDijkstraBackwardHelper.hpp  CHDijkstraForwardHelper.hpp  DistanceOracleCHDijkstra.hpp  DistanceOracleCHDijkstraBackwardHelper.hpp  DistanceOracleCHDijkstraForwardHelper.hpp
include/algorithms/pathfinding/dijkstra/: DijkstaQueue.hpp  Dijkstra.hpp  DijkstraQueue.hpp  DistanceOracleDijkstra.hpp  PathFindingDijkstra.hpp
include/common/: BackwardEdgeView.hpp  BasicGraphTypes.hpp  EmptyBase.hpp  Parsing.hpp  Range.hpp  Tokenizer.hpp
include/concept/: BackwardEdgeInfoGraph.hpp  Graph.hpp  WeightedGraph.hpp
include/concepts/: BackwardConnections.hpp  BackwardEdgeView.hpp  BackwardEdges.hpp  BackwardGraph.hpp  CHGraph.hpp  DistanceOracle.hpp  EdgeWeights.hpp  Edges.hpp  ForwardConnections.hpp  ForwardGraph.hpp  NodeLevels.hpp  Nodes.hpp  Parseable.hpp  Path.hpp  PathOracle.hpp  Permutable.hpp  Sortable.hpp  SortableGraph.hpp  Utils.hpp
include/concepts/algorithms/: DistanceOracle.hpp  PathOracle.hpp
include/concepts/graphs/: BackwardGraph.hpp  EdgeWeights.hpp  Edges.hpp  ForwardGraph.hpp  NodeLevels.hpp  Nodes.hpp
include/concepts/oracles/: DistanceOracle.hpp
include/concepts/structures/: BackwardGraph.hpp  CHGraph.hpp  EdgeWeights.hpp  Edges.hpp  ForwardGraph.hpp  NodeLevels.hpp  Nodes.hpp  Path.hpp
include/graphs/: Path.hpp
include/graphs/common/: LevelBase.hpp  WeightBase.hpp
include/graphs/edges/: FMIEdge.hpp  ShortcutBase.hpp  SimpleEdge.hpp  SrcBase.hpp  TrgBase.hpp  WeightedEdge.hpp
include/graphs/nodes/: FMINode.hpp  IDBase.hpp  LatLngBase.hpp  SimpleMapNode.hpp
include/graphs/offsetarray/: OffsetArray.hpp  OffsetArrayBackwardGraph.hpp  OffsetArrayEdges.hpp  OffsetArrayForwardGraph.hpp  OffsetArrayNodes.hpp
include/impl/graphs/: ForwardOffsetArray.hpp
include/parsing/offsetarray/: Parser.hpp
include/utils/: MinMax.hpp  Permutation.hpp
src/: main.cpp
test/: CMakeLists.txt  globals.hpp  main.cpp
test/algorithms/distoracle/: PHASTTest.cpp
test/algorithms/distoracle/ch/: CHDijkstraTest.cpp  DistanceOracleCHDijkstraTest.cpp
test/algorithms/distoracle/dijkstra/: DijkstraTest.cpp  DistanceOracleDijkstraTest.cpp
test/algorithms/distoracle/hublabels/: HubLabelTest.cpp
test/algorithms/pathfinding/ch/: CHDijkstraTest.cpp  DistanceOracleCHDijkstraTest.cpp
test/algorithms/pathfinding/dijkstra/: CHDijkstraTest.hpp  DijkstraTest.cpp  DistanceOracleDijkstraTest.cpp  PathFindingDijkstraTest.cpp
test/common/: BackwardEdgeViewTest.cpp  ParsingTest.cpp  TokenizerTest.cpp
test/data/: ch-fmi-example.txt  stgtregbz-dists.txt
test/graphs/edges/: FMIEdgeTest.cpp
test/graphs/nodes/: FMINodeTest.cpp
test/graphs/offsetarray/: OffsetArrayTest.cpp
test/utils/: PermutationTest.cpp
